@@ -1,3 +1,15 @@
+2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Minor MT-Alpha optimizations.
+
+	* tools/bin/cce.in: Option `-mcpu' actually overrides `-mfix',
+	etc. In order to use all ISA extensions, use `-mcpu=21264a'
+	instead.
+
+	* lib/include/cstrings.h: Declare `ffs'.
+	* lib/src/ffs.c: New.
+	* lib/mtalpha.mk: Tell `malloc' to use `ffs'. Compile `ffs.c'.
+
 2010-06-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Add missing module initializers in slc library.
